@@ -1,5 +1,5 @@
 #!/bin/bash
-CODEHOME=~/code/pandora/trunk
+CODEHOME=~/code/pandora/branches/pandora_3.2
 CODEHOME_ENT=~/code/artica/code
 RPMHOME=/usr/src/packages
 
@@ -19,10 +19,10 @@ rpmbuild -ba $CODEHOME/pandora_server/pandora_server.spec || exit 1
 rpmbuild -ba $CODEHOME/pandora_agents/unix/pandora_agent.spec || exit 1
 
 # Enterprise console
-rpmbuild -ba $CODEHOME_ENT/pandora/trunk/pandora_console/enterprise/pandora_console_enterprise.spec || exit 1
+rpmbuild -ba $CODEHOME_ENT/pandora/branches/3.2/pandora_console/enterprise/pandora_console_enterprise.spec || exit 1
 
 # Enterprise server
-rpmbuild -ba $CODEHOME_ENT/pandora/trunk/pandora_server/PandoraFMS-Enterprise/pandora_server_enterprise.spec || exit 1
+rpmbuild -ba $CODEHOME_ENT/pandora/branches/3.2/pandora_server/PandoraFMS-Enterprise/pandora_server_enterprise.spec || exit 1
 
 # Updatemanager keygen
 rpmbuild -ba $CODEHOME_ENT/updatemanager/keygen/pandora/pandora_keygen.spec || exit 1
